[VrShell] Fix incorrect loading indicator colors.

This also reorganizes the names to always have foreground first.

Bug: 730712
Change-Id: Iad914ead69489069f5f07d6d7cf6ef7adae17053
Reviewed-on: https://chromium-review.googlesource.com/527533
Reviewed-by: Christopher Grant <cjgrant@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#477750}
Former-commit-id: 9576b7bd92fc9c368cd0200a0105b8244396bd3f